task: simplify Discovery Model and Service #68
